--- a/share/static/css/molotov.css
+++ b/share/static/css/molotov.css
@@ -16,8 +16,8 @@ body
 {
   padding: 0;
   margin: 0;
-  font-size: small;
-  font-family: verdana, sans-serif;
+  font-size: 10pt;
+  font-family: "DejaVu Sans", "Bitstream Vera Sans", verdana, sans-serif;
 }
 
 #body
@@ -657,4 +657,9 @@ table.repo_file td
   font-size: smaller;
   margin: 0;
   padding: 0;
+}
+
+a img
+{ 
+  border-width: 0;
 }
