CherryPy 3.0.0 support added.

--- a/share/static/css/molotov.css
+++ b/share/static/css/molotov.css
@@ -1,665 +1,3 @@
 @charset "UTF-8";
 @import "colors.css";
-
-input[type=hidden]
-{
-  display: none;
-  visibility: hidden;
-}
-
-label
-{
-  font-weight: bolder;
-}
-
-body
-{
-  padding: 0;
-  margin: 0;
-  font-size: 10pt;
-  font-family: "DejaVu Sans", "Bitstream Vera Sans", verdana, sans-serif;
-}
-
-#body
-{
-  margin-top: 0;
-  margin-left: 16%;
-  margin-right: 16%;
-  padding-top: 2em;
-  border-style: solid;
-  border-width: 0;
-  border-left-width: 1px;
-  border-right-width: 1px;
-}
-
-#main
-{ 
-  padding-left: 1em;
-  padding-right: 1em;
-}
-
-#head
-{
-  font-size: x-small;
-  border-style: solid;
-  border-width: 0;
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-  padding: 2em;
-  padding-bottom: 0;
-}
-
-#headtitle
-{ 
-  font-weight: bold;
-  font-size: xx-large;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 1.75em;
-}
-
-#head ul#cocktails
-{ 
-  list-style-type: none;
-  text-align: center;
-  margin: 0;
-}
-
-#head #cocktails li
-{ 
-  display: inline;
-  margin-left: .5em;
-  margin-right: .5em;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-#head #cocktails a:hover
-{ 
-  text-decoration: none;
-}
-
-h1.title
-{
-  font-weight: bold;
-  font-size: x-large;
-  text-align: center;
-}
-
-h1
-{ 
-  font-weight: bold;
-  font-size: large;
-}
-
-h2
-{
-  font-weight: bold;
-  font-size: larger;
-}
-
-h3
-{ 
-  font-weight: bold;
-  font-size: smaller;
-}
-
-.flash
-{
-  font-weight: bolder;
-  border-style: solid;
-  border-width: 1px;
-  padding: 0.25em;
-  margin-bottom: 1.5em;
-}
-
-#head p
-{
-  margin-top: .75em;
-}
-
-ul#sections
-{
-  list-style-type: none;
-  margin: 0;
-  margin-top: 3em;
-  margin-bottom: .5em;
-  padding: 0;
-  text-align: center;
-}
-
-ul#sections li
-{
-  display: inline;
-  margin-left: 1em;
-  margin-right: 1em;
-}
-
-#footer
-{ 
-  margin-top: 4em;
-  font-size: x-small;
-  text-align: center;
-}
-
-#footer a[href]
-{
-  text-decoration: none;
-}
-
-ul.uselist, ul.uselist li
-{
-  display: inline;
-  padding: 0;
-}
-
-ul.uselist li:first-child:before
-{ 
-  content: "";
-}
-
-ul.uselist li:before
-{ 
-  content: " | ";
-}
-
-.toolbar, .toolbar ul
-{ 
-  text-align: right;
-  margin-right: 1em;
-}
-
-.toolbar ul, .toolbar li
-{
-  display: inline;
-  padding: 0;
-  font-size: smaller;
-}
-
-.toolbar li:first-child:before
-{ 
-  content: "";
-}
-
-.toolbar li:before
-{ 
-  content: " | ";
-}
-
-.toolbox
-{
-  font-size: smaller;
-  float: right;
-  width: 20%;
-  margin-left: 1em;
-  margin-bottom: 1em;
-  padding: 0.5em;
-  border-width: 1px;
-  border-style: dashed;
-}
-
-.toolbox ul
-{
-  list-style-type: none;
-  list-style-position: inside;
-  padding-left: 2em;
-}
-
-.toolbox a[href]
-{
-  text-decoration: none;
-}
-
-.toolbox form, .toolbox p
-{
-  padding-left: 2em;
-  margin-bottom: 1em;
-}
-
-.toolbox form input
-{
-  font-size: smaller;
-  margin-top: 0.25em;
-  margin-bottom: 0.25em;
-  border: 1px solid;
-}
-
-div.blog_billet_info
-{
-  font-size: smaller;
-  margin: 0;
-  padding: 0;
-}
-
-.blog_billet
-{ 
-  margin-top: 2em;
-  margin-bottom: 2.5em;
-}
-
-.blog_billet h1, .blog_billet. h1
-{
-  margin-bottom: 0.25em;
-}
-
-.blog_billet h1:before
-{
-  content: '«';
-  font-weight: bold;
-  font-size: x-large;
-}
-
-.blog_billet h1:after
-{
-  content: '»';
-  font-weight: bold;
-  font-size: x-large;
-}
-
-.blog_billet_info a:hover, .blog_billet_info a[href]:hover
-{ 
-  text-decoration: none;
-}
-
-ul.news_info_tags
-{ 
-  background-image: url('img/tags.png');
-  background-repeat: no-repeat;
-  padding-left: 20px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  margin-left: 2em;
-  list-style-type: none;
-  display: inline;
-}
-
-.news_info_tags li
-{ 
-  display: inline;
-}
-
-.news_info_tags li:first-child:before
-{ 
-  content: "";
-}
-
-.news_info_tags li:before
-{ 
-  content: ", ";
-}
-
-ul.news_links
-{ 
-  font-size: smaller;
-  list-style-image: url('img/link.png');
-  list-style-position: inside;
-}
-
-.error
-{ 
-  font-weight: bold;
-}
-
-.blog_billet .comment
-{ 
-  border-width: 1px;
-  border-style: solid;
-  margin: 1em;
-  padding: .5em;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
-  padding-bottom: .5em;
-}
-
-.blog_billet .comment .info
-{ 
-  font-size: smaller;
-  text-align: right;
-  margin-top: .25em;
-}
-
-a[href]
-{
-  text-decoration: none;
-}
-
-a[href]:hover
-{ 
-  text-decoration: underline;
-}
-
-a.wikiname[href]
-{
-  text-decoration: none;
-  border-bottom: 0;
-}
-
-a .email_at:before
-{ 
-  content: '@';
-}
-
-a .email_dot:before
-{ 
-  content: '.';
-}
-
-hr.spacer
-{ 
-  clear: both;
-  visibility: hidden;
-}
-
-textarea, input
-{ 
-  background: white;
-  display: block;
-  border-width: 1px;
-  border-style: solid;
-  margin-top: 1em;
-  margin-bottom: 1.5em;
-}
-
-.pageinfo
-{ 
-  font-size: smaller;
-  text-align: right;
-  margin-top: 2em;
-}
-
-.datetime
-{ 
-  background: url('/static/images/time.png');
-  background-repeat: no-repeat;
-  padding-left: 20px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-
-.user
-{ 
-  background: url('/static/images/user-16x16.png');
-  background-repeat: no-repeat;
-  padding-left: 20px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  font-style: normal;
-}
-
-.comments
-{ 
-  background: url('/static/images/comments-16x16.png');
-  background-repeat: no-repeat;
-  padding-left: 20px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  font-style: normal;
-}
-
-.history
-{
-  font-size: smaller;
-  list-style-type: none;
-  padding: 0;
-}
-
-.history li
-{ 
-  display: inline;
-  font-weight: bolder;
-}
-
-.history li:before
-{ 
-  content: "»";
-}
-
-.history li a
-{
-  font-weight: normal;
-}
-
-ul.modifs
-{ 
-  list-style-type: none;
-}
-
-.modifs li
-{ 
-  /*margin-bottom: 1em;*/
-}
-
-.modifs a:before
-{ content: "["; }
-
-.modifs a:after
-{ content: "]"; }
-
-.modifs a.user:before
-{ content: ""; }
-
-.modifs a.user:after
-{ content: ""; }
-
-.modifs code
-{ 
-  border-style: solid;
-  border-width: 1px;
-  display: block;
-  margin: 1em;
-  padding: .25em;
-}
-
-input[type=checkbox]
-{ 
-  margin: 0;
-  margin-right: 1em;
-  display: inline;
-}
-
-input[type=submit]
-{ 
-  margin: 0;
-  display: inline;
-}
-
-select
-{ 
-  display: block;
-  margin-top: .25em;
-  margin-bottom: .5em;
-}
-
-.preview
-{ 
-  border-width: 1px;
-  border-style: solid;
-  margin: 2em;
-  padding: 1em;
-}
-
-.footnote_reference
-{ 
-  
-}
-
-table
-{ 
-  border-collapse: collapse;
-}
-
-.citation td, .footnote td
-{ 
-  border: 0;
-}
-
-table.diff td
-{ 
-  font-family: monospace, courier;
-  font-size: smaller;
-}
-
-.modifs input
-{
-  margin: 0;
-  display: inline;
-}
-
-table.svn_repo
-{ 
-}
-
-.svn_repo td
-{
-  padding-left: 1em;
-  padding-right: 1em;
-  padding-top: 0.25em;
-  padding-bottom: 0.25em;
-}
-
-.svn_repo .log
-{ 
-  font-size: smaller;
-}
-
-form.select_revision
-{ 
-  text-align: right;
-  margin-bottom: 1em;
-  font-size: smaller;
-}
-
-.select_revision label, .select_revision input
-{ 
-  font-size: smaller;
-  font-weight: normal;
-  display: inline;
-  margin: 0;
-}
-
-.svn_repo .dir .name
-{ 
-  background: url('/static/images/dir-16x16.png');
-  background-repeat: no-repeat;
-  padding-left: 20px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-
-.svn_repo .file .name
-{
-  background: url('/static/images/file-16x16.png');
-  background-repeat: no-repeat;
-  padding-left: 20px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-
-.repo_path
-{ 
-  font-size: 130%;
-  font-weight: bold;
-  letter-spacing: 0.001em;
-}
-
-.repo_path root
-{ 
-  
-}
-
-table.repo_file td
-{ 
-  border: 0px;
-  border-collapse: collapse;
-}
-
-.repo_file .line_number, .repo_file .line_data
-{
-  font-family: courier;
-}
-
-.repo_file .line_data
-{ 
-  white-space: pre;
-}
-
-#userbox
-{ 
-  font-size: x-small;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 4em;
-  padding-left: 1em;
-  padding-top: .1em;
-  padding-bottom: .1em;
-}
-
-#userbox form, #userbox label, #userbox input
-{ 
-  font-size: x-small;
-  display: inline;
-  margin: 0;
-  padding: 0;
-  letter-spacing: .05em;
-}
-
-#userbox input
-{
-  border: 0;
-  margin-left: .25em;
-  margin-right: .25em;
-}
-
-#userbox input[type=submit]:hover, #userbox a:hover
-{ 
-  text-decoration: none;
-  cursor: pointer;
-}
-
-#userbox p
-{ 
-  display: inline;
-  margin: 0;
-  padding: 0;
-  margin-right: 1em;
-}
-
-.ticket_info
-{ 
-  font-size: smaller;
-  margin: 2em;
-  padding: 1em;
-}
-
-.submenu
-{ 
-  text-align: right;
-  font-size: smaller;
-}
-
-.submenu a
-{ 
-  border-width: 0;
-  border-style: dotted;
-  border-bottom-width: 1px;
-}
-
-.submenu a:hover
-{ 
-  text-decoration: none;
-  border-width: 0;
-  border-style: dotted;
-  border-bottom-width: 1px dotted;
-}
-
-.blog_billet_info
-{
-  font-size: smaller;
-  margin: 0;
-  padding: 0;
-}
-
-a img
-{ 
-  border-width: 0;
-}
+@import "structure.css";
