Blog billet modification support added. User display name modification added.

--- a/share/static/css/structure.css
+++ b/share/static/css/structure.css
@@ -391,6 +391,16 @@ textarea, input
   font-style: normal;
 }
 
+.edit
+{ 
+  background: url('/static/images/edit-16x16.png');
+  background-repeat: no-repeat;
+  padding-left: 20px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  font-style: normal;
+}
+
 .comments
 { 
   background: url('/static/images/comments-16x16.png');
